Refactored code:
* new Integer(...) => Integer.valueOf(...)